[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-tk"
version = "0.1.0"
description = "A comprehensive toolkit for analyzing Xenium spatial transcriptomics data"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Will Dampier", email = "wnd22@drexel.edu"}
]
keywords = ["spatial transcriptomics", "xenium", "single-cell", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core — keep minimal so analysis + image stacks can be isolated.
# Use extras for analysis (Xenium / Scanpy / Squidpy) and image (Bio-Formats / Cellpose) pipelines.
dependencies = [
    "tomli>=1.2.0; python_version < '3.11'",
]

[project.optional-dependencies]
# `pip install .[analysis]` — Xenium-style analysis commands (Scanpy/Squidpy + SpatialData).
# `spatial` is kept as an alias for backward compatibility.
analysis = [
    "numpy>=1.26,<3",
    "scipy>=1.12",
    "pandas>=2.3,<3",
    "matplotlib>=3.10,<4",
    "seaborn>=0.13,<1",
    "anndata>=0.12,<0.13",
    "spatialdata>=0.6,<0.7",
    "spatialdata-io>=0.5,<0.6",
    "squidpy>=1.7,<1.8",
    "scanpy>=1.11,<1.12",
    "decoupler",
    "scikit-learn",
    "igraph",
    "leidenalg",
]

spatial = [
    "spatial-tk[analysis]",
]

image = [
    "numpy>=1.26,<2",
    "scipy>=1.11,<1.12",
    "pandas>=2.3,<3",
    "matplotlib>=3.10,<4",
    "seaborn>=0.13,<1",
    "python-javabridge==4.0.3",
    "python-bioformats==4.1.0",
    "pims>=0.7,<0.8",
    "torch>=2.1,<3",
    "torchvision>=0.16,<1",
    "cellpose==2.0.5",
    "pillow>=10,<11",
    "scikit-image>=0.22,<0.25",
    "tifffile>=2023,<2026",
]

dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
spatial-tk = "spatial_tk.cli:main"

[project.urls]
Homepage = "https://github.com/DamLabResources/spatial-tk"
Repository = "https://github.com/DamLabResources/spatial-tk"
Documentation = "https://github.com/DamLabResources/spatial-tk/blob/main/README.md"

[tool.setuptools]
packages = ["spatial_tk", "spatial_tk.commands", "spatial_tk.core", "spatial_tk.utils"]

[tool.setuptools.package-data]
spatial_tk = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "slow: tests that run on full external datasets",
    "functional_fast: functional tests intended for ROI fixtures",
    "functional_full: functional tests intended for full external fixtures",
    "api: tests that exercise the core Python API (programmatic pipelines)",
]
# Use custom temp directory to avoid filling up /tmp
# This directory should be on a partition with more space
tmp_path_retention_count = 0
tmp_path_retention_policy = "none"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

